--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
-@import '../node_modules/h8k-design/dist/index.css';
+@import "../node_modules/h8k-design/dist/index.css";
+
+.header {
+  display: flex;
+  justify-content: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+  background: #9195f6;
+  padding: 10px;
+  margin: unset;
+}
